Modification of the application.html file! Adding a comment

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
           <%= link_to 'New item', new_item_path, class: "nav-link btn mr-1"  %> 
           </li>
        
-
+      <!-- Gestion des connections utilisateur-->
         <ul class="navbar-nav my-2 my-lg-0" style="position: absolute; left: 80%;">
         <% if !current_user%> 
 
