--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,24 @@
-<h2>Forgot your password?</h2>
+<!-- Form that allow the user to reset is password -->
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <br><br><br>
+      <h1 class="h3 mb-3 font-weight-normal text-center">😭 Forgot your password  😭</h1>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post , class: "form-signin mt-3"}) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
+        <div class="form-group">
+          <%= f.label :email , "Email"%><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email" , class: "form-control" %>
+        </div>
+
+        <div class="actions mt-5">
+          <%= f.submit "Send me reset password instructions", class: "btn btn-lg btn-primary btn-block" %>
+        </div>
+      <% end %>
+
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
