--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,113 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Cat Market place</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="" rel="stylesheet">
-
-</head>
-
-<body>
-
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">
-      <img src="/docs/4.3/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">Neko MarketPlace</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Cart</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">New visitor</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Log in</a>
-          </li>
-        </ul>
-      </div>
-    		<form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-
-
-    </div>
-  </nav>
-
-  <!-- Page Content -->
+<div class="jumbotron text-center" style="background-image: url('https://images.pexels.com/photos/316465/pexels-photo-316465.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');background-position: center center; background-size: cover;">
   <div class="container">
+​
+    <!-- Ajout de la fonctionnalité qui permet d'ajouter une alerte au user-->
+  <% if flash[:alert] != nil %>
+    <div class='alert alert-success mt-4'>
+      <%= flash[:alert] %>
+    </div>
+    <% end %>
+​
+    <h1 class="display-5 text-center" style="color:#37444a" >🧑🏼 BIENVENUE à toi!!!! 👨🏻</h1><br>
+    <p class="text-center">Tu trouveras ci-dessous la liste de tous les Events que nous avons en base à ce jour<br><br>
+    
+   Tu as également la possiblité de créer un nouveau Event<br>
+   <!-- Permet d'ajouter la nouvelle fonctionnalité liée à la création de nouvel evenement-->
+      <br><br><a href=<%= new_item_path %>>
+      <button class='btn btn-primary '>
+        <%= link_to 'Create an Item', new_item_path(@items), :class => "btn"%>
+        </button>
+    </a>
+    </p>
+  </div>
+  </div>
+​
+</div>
 
-    <div class="row">
-
-      <div class="col-lg-3">
-
-        <h1 class="my-4">Welcome</h1>
-        <div class="list-group">
-          <a href="#" class="list-group-item">Category 1</a>
-          <a href="#" class="list-group-item">Category 2</a>
-          <a href="#" class="list-group-item">Category 3</a>
-        </div>
-
-      </div>
-      <!-- /.col-lg-3 -->
-
-      <div class="col-lg-9">
-
-        <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-
-        <% @items.each do |item| %>
+       
         <div class="row">
         	
-
+ <% @items.each do |item| %>
+         
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <!-- <img class="card-img-top" src="<%= item.image_url %>" alt="">-->
+               <img class="card-img-top" src="<%=(url_for(item.image_url)) %>" alt="">
               <div class="card-body">
                 <h4 class="card-title">
                   <h5><%= item.title %></h5>
@@ -115,24 +42,30 @@
                 </h4>
                 <h5><%= item.price %></h5>
                 <p class="card-text"><%= item.description %></p>
-             		<a href="#"><%= link_to 'Show', item %>   </a>
+             		 <div class="btn btn-primary">
+                    <%= link_to 'Show', item_path(item.id), :class => "btn" %> 
+                 <!-- create button for "add to cart"-->
+
+
+                  </div>
+
+
+
               </div>
               
 
-              <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-              </div>
+              
             </div>
           </div>
 
         
 
-
+ <% end %>
           
         
         </div>
         <!-- /.row -->
- <% end %>
+
 
       </div>
       <!-- /.col-lg-9 -->
