Add Cat picture for category & Product in index.html

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,7 @@
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700,800|Roboto:400,500,700" rel="stylesheet"> 
-  </head>
-  <header>
-
-
+  
   <!-- MAIN WRAPPER -->
   <div class="body-wrap shop-default shop-minimalist">
       <div id="st-container" class="st-container">
@@ -372,7 +369,7 @@
           </div>
       </nav>
   </div>
-  </header>
+  </head>
 
   <body>
 
@@ -388,7 +385,7 @@
   
   </body>
   <!-- FOOTER -->
-  <footer id="footer" class="footer">
+  <footer id="footer" class="footer mt-4 bg-dark">
       <div class="footer-top">
           <div class="container">
               <div class="row cols-xs-space cols-sm-space cols-md-space">
