--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
 <html>
 <head>
 	<title>Cat MP</title>
@@ -12,7 +11,7 @@
 	                        <div class="container">
 	                            <div class="section-title section-title--style-1 text-center mb-3">
 	                                <h3 class="section-title-inner heading-6 strong-600 text-uppercase ls-2">
-	                                    <span>Featured collections</span>
+	                                    <span>Choose your favourite cat</span>
 	                                </h3>
 	                                <span class="section-title-delimiter clearfix d-none"></span>
 	                            </div>
@@ -30,19 +29,15 @@
 	                                    <div class="masonry-item col-md-6">
 	                                        <div class="card bg-minimalist">
 	                                            <div class="card-image">
-	                                                <a href="#">
-	                                                    <img src="../../assets/images/prv/shop/accessories/img-promo-1.png">
-	                                                </a>
+	                                                <%= image_tag 'cat-category/cat-birman.png' %>
 	                                            </div>
 	                                            <div class="card-body--overlay d-flex align-items-start">
 	                                                <div class="col">
 	                                                    <div class="px-4 py-4">
 	                                                        <h3 class="heading heading-4 strong-500 mb-0">
-	                                                            Jackets
+	                                                            Birman
 	                                                        </h3>
-	                                                        <a href="#" class="link link-xs link--style-3 text-capitalize">
-	                                                            See products
-	                                                        </a>
+	                                                        <%= link_to 'See products', items_path, class: "link link-xs link--style-3 text-capitalize" %> 
 	                                                    </div>
 	                                                </div>
 	                                            </div>
@@ -52,17 +47,15 @@
 	                                    <div class="masonry-item col-md-6">
 	                                        <div class="card bg-minimalist">
 	                                            <div class="card-image">
-	                                                <img src="../../assets/images/prv/shop/accessories/img-promo-3.png">
+	                                                <%= image_tag 'cat-category/cat-persian.png' %>
 	                                            </div>
 	                                            <div class="card-body--overlay d-flex align-items-start">
 	                                                <div class="col">
 	                                                    <div class="px-4 py-4">
 	                                                        <h3 class="heading heading-4 strong-500 mb-0">
-	                                                            Sunglasses
+	                                                            Persian
 	                                                        </h3>
-	                                                        <a href="#" class="link link-xs link--style-3 text-capitalize">
-	                                                            See products
-	                                                        </a>
+	                                                        <%= link_to 'See products', items_path, class: "link link-xs link--style-3 text-capitalize" %> 
 	                                                    </div>
 	                                                </div>
 	                                            </div>
@@ -72,19 +65,15 @@
 	                                    <div class="masonry-item col-md-6">
 	                                        <div class="card bg-minimalist">
 	                                            <div class="card-image">
-	                                                <a href="#">
-	                                                    <img src="../../assets/images/prv/shop/accessories/img-promo-2.png">
-	                                                </a>
+	                                                <%= image_tag 'cat-category/cat-bengal.png' %>
 	                                            </div>
 	                                            <div class="card-body--overlay d-flex align-items-start">
 	                                                <div class="col">
 	                                                    <div class="px-4 py-4">
 	                                                        <h3 class="heading heading-4 strong-500 mb-0">
-	                                                            Backpacks
+	                                                            Bengal
 	                                                        </h3>
-	                                                        <a href="#" class="link link-xs link--style-3 text-capitalize">
-	                                                            See products
-	                                                        </a>
+	                                                        <%= link_to 'See products', items_path, class: "link link-xs link--style-3 text-capitalize" %> 
 	                                                    </div>
 	                                                </div>
 	                                            </div>
@@ -94,17 +83,15 @@
 	                                    <div class="masonry-item col-md-6">
 	                                        <div class="card bg-minimalist">
 	                                            <div class="card-image">
-	                                                <img src="../../assets/images/prv/shop/accessories/img-promo-4.png">
+	                                                <%= image_tag 'cat-category/cat-kitty.png' %>
 	                                            </div>
 	                                            <div class="card-body--overlay d-flex align-items-start">
 	                                                <div class="col">
 	                                                    <div class="px-4 py-4">
 	                                                        <h3 class="heading heading-4 strong-500 mb-0">
-	                                                            Home Accessories
+	                                                            Kitty
 	                                                        </h3>
-	                                                        <a href="#" class="link link-xs link--style-3 text-capitalize">
-	                                                            See products
-	                                                        </a>
+	                                                        <%= link_to 'See products', items_path, class: "link link-xs link--style-3 text-capitalize" %> 
 	                                                    </div>
 	                                                </div>
 	                                            </div>
@@ -130,9 +117,7 @@
 	                                        <div class="block product bg-transparent no-radius">
 	                                            <div class="product-image">
 	                                                <div class="view view-first">
-	                                                    <a href="#">
-	                                                        <img src="../../assets/images/prv/shop/accessories/img-1a.png">
-	                                                    </a>
+	                                                     <%= link_to image_tag("cat-product/cat-example.png"), items_path %>
 	                                                </div>
 
 	                                                <div class="product-actions--a product-actions--2" data-animation-in="slideInRight"  data-animation-out="slideOutRight">
@@ -166,9 +151,7 @@
 	                                        <div class="block product bg-transparent no-radius">
 	                                            <div class="product-image">
 	                                                <div class="view view-first">
-	                                                    <a href="#">
-	                                                        <img src="../../assets/images/prv/shop/accessories/img-2a.png">
-	                                                    </a>
+	                                                     <%= link_to image_tag("cat-product/cat-example.png"), items_path %>
 	                                                </div>
 
 	                                                <div class="product-actions--a product-actions--2" data-animation-in="slideInRight" data-animation-out="slideOutRight">
@@ -202,9 +185,7 @@
 	                                        <div class="block product bg-transparent no-radius">
 	                                            <div class="product-image">
 	                                                <div class="view view-first">
-	                                                    <a href="#">
-	                                                        <img src="../../assets/images/prv/shop/accessories/img-3a.png">
-	                                                    </a>
+	                                                     <%= link_to image_tag("cat-product/cat-example.png"), items_path %>
 	                                                </div>
 
 	                                                <div class="product-actions--a product-actions--2" data-animation-in="slideInRight" data-animation-out="slideOutRight">
@@ -238,9 +219,7 @@
 	                                        <div class="block product bg-transparent no-radius">
 	                                            <div class="product-image">
 	                                                <div class="view view-first">
-	                                                    <a href="#">
-	                                                        <img src="../../assets/images/prv/shop/accessories/img-4a.png">
-	                                                    </a>
+	                                                     <%= link_to image_tag("cat-product/cat-example.png"), items_path %>
 	                                                </div>
 
 	                                                <div class="product-actions--a product-actions--2" data-animation-in="slideInRight"  data-animation-out="slideOutRight">
@@ -276,9 +255,7 @@
 	                                        <div class="block product bg-transparent no-radius">
 	                                            <div class="product-image">
 	                                                <div class="view view-first">
-	                                                    <a href="#">
-	                                                        <img src="../../assets/images/prv/shop/accessories/img-5a.png">
-	                                                    </a>
+	                                                     <%= link_to image_tag("cat-product/cat-example.png"), items_path %>
 	                                                </div>
 
 	                                                <div class="product-actions--a product-actions--2" data-animation-in="slideInRight" data-animation-out="slideOutRight">
@@ -312,9 +289,7 @@
 	                                        <div class="block product bg-transparent no-radius">
 	                                            <div class="product-image">
 	                                                <div class="view view-first">
-	                                                    <a href="#">
-	                                                        <img src="../../assets/images/prv/shop/accessories/img-6a.png">
-	                                                    </a>
+	                                                     <%= link_to image_tag("cat-product/cat-example.png"), items_path %>
 	                                                </div>
 
 	                                                <div class="product-actions--a product-actions--2" data-animation-in="slideInRight" data-animation-out="slideOutRight">
@@ -348,9 +323,7 @@
 	                                        <div class="block product bg-transparent no-radius">
 	                                            <div class="product-image">
 	                                                <div class="view view-first">
-	                                                    <a href="#">
-	                                                        <img src="../../assets/images/prv/shop/accessories/img-7a.png">
-	                                                    </a>
+	                                                     <%= link_to image_tag("cat-product/cat-example.png"), items_path %>
 	                                                </div>
 
 	                                                <div class="product-actions--a product-actions--2" data-animation-in="slideInRight" data-animation-out="slideOutRight">
@@ -384,9 +357,7 @@
 	                                        <div class="block product bg-transparent no-radius">
 	                                            <div class="product-image">
 	                                                <div class="view view-first">
-	                                                    <a href="#">
-	                                                        <img src="../../assets/images/prv/shop/accessories/img-8a.png">
-	                                                    </a>
+	                                                     <%= link_to image_tag("cat-product/cat-example.png"), items_path %>
 	                                                </div>
 
 	                                                <div class="product-actions--a product-actions--2" data-animation-in="slideInRight" data-animation-out="slideOutRight">
