--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,2 +1,61 @@
-<h1>Items#new</h1>
-<p>Find me in app/views/items/new.html.erb</p>
+
+<div class='container mt-4'>
+	<div class='justify-content-center'>
+		<div class='col-6'>
+			<!--<% if @item != nil %>
+			<div class ='alert alert-danger'>
+				<p>Impossiblede créer l'objet</p>
+			</div>
+			<% end %>-->
+
+			<%= form_tag url_for(action: 'create'), method: "post" do %>
+
+				<div class='form-group'>
+				<%= label_tag 'Enter a title:' %>
+				<%= text_field_tag 'title', nil, class:'form-control' %>
+			</div>
+
+			<div class='form-group'>
+				<%= label_tag 'Enter a description:' %>
+				<%= text_area_tag 'description', nil, class:'form-control', rows: 5 %>
+				<small id="descriptionvalidation'" class="form-text text-muted">
+  			Your description must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+				</small>
+			</div>
+
+			
+			<div class='form-group'>
+				<%= label_tag 'Choose a price:' %>
+				<br>
+				<%= number_field_tag 'price', nil, class:'special_input', rows: 2 %>
+			</div>
+
+
+
+
+			<div class='form-group'>
+				<%= label_tag 'Upload an image:' %>
+				<%= file_field_tag 'image_url', class:'form-control-file' %>
+			</div>
+
+
+
+
+
+
+			<%= submit_tag 'Create Item', class:'btn btn-primary' %>
+
+
+<% end %>
+
+</div>
+</div>
+</div>
+
+
+
+
+
+
+
+
