Finish index.html view

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -142,7 +142,7 @@
 	                                                    <i class="fa fa-star-o"></i>
 	                                                </span>
 	                                                <div class="price-wrapper">
-	                                                    <span class="price heading-6 c-gray-light strong-400">€<span class="price-value"><%= item.price %></span></span>
+	                                                    <span class="price-value"><%= item.price %><span class="price heading-6 c-gray-light strong-400"> €</span></span>
 	                                                </div>
 	                                            </div>
 	                                        </div>
