Add photo slider in show.html view but a little probelm to justify photo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -385,7 +385,7 @@
   
   </body>
   <!-- FOOTER -->
-  <footer id="footer" class="footer mt-4 bg-dark">
+  <footer id="footer" class="footer bg-dark">
       <div class="footer-top">
           <div class="container">
               <div class="row cols-xs-space cols-sm-space cols-md-space">
