--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,24 +1,109 @@
-<div class="col-lg-9">
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Cat MP - Product</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+                      <section class="slice bg-minimalist">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="swiper-js-container">
+                                        <div class="swiper-container" data-swiper-items="1" data-swiper-space-between="0">
+                                            <div class="swiper-wrapper pb-5">
+                                                <div class="swiper-slide">
+                                                    <%= image_tag(@item.image_url) %>
+                                                </div>
+                                                <div class="swiper-slide">
+                                                    <%= image_tag 'cat-category/cat-birman.png', class: "img-fluid"%>
+                                                </div>
+                                                <div class="swiper-slide">
+                                                    <%= image_tag 'cat-category/cat-bengal.png', class: "img-fluid"%>
+                                                </div>
+                                            </div>
+                                            <div class="swiper-pagination"></div>
+                                        </div>
+                                    </div>
+                                </div>
 
-        <div class="card mt-4">
-          <img class="card-img-top img-fluid" src="<%=(url_for(@item.image_url)) %>" alt="">
-          <div class="card-body">
-            
-            <h2 class="card-title">
-            	<h3><%= @item.title %></h3>
-            	
-            </h2>
-            
-            <h4><%= @item.price%></h4>
-            <p class="card-text"><%= @item.description %></p>
-            
-            <!--add "add to cart" button-->
+                                <div class="col-lg-5 ml-lg-auto">
+                                    <div class="product-description-wrapper">
+                                        <!-- Product title -->
+                                        <h2 class="heading heading-4 strong-600 text-capitalize">
+                                            <%= @item.title %>
+                                        </h2>
+                                        <span class="heading heading-light heading-5 strong-600 mt-3">
+                                            <%= @item.price %> €
+                                        </span>
 
-          </div>
-        </div>
-        <!-- /.card -->
+                                        <span class="space-xs-md"></span>
 
-        
+                                        <div class="row">
+                                            <div class="col-lg-8">
+                                                <div class="form-default">
+                                                    
 
-      </div>
-      <!-- /.col-lg-9 -->
+                                                    <div class="row mt-2">
+                                                        <div class="col-md-6">
+                                                            <span>Quantity to order : (fast delivering)</span>
+                                                    
+                                                        </div>
+                                                        <div class="col-md-6">
+                                                            <div class="form-group">
+                                                                <input type="text" class="form-control form-control-lg text-center" value="1">
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row mt-2">
+                                                        <div class="col-12">
+                                                            <!-- Add to cart button -->
+                                                            <button type="button" class="btn btn-lg btn-block btn-gray-dark btn-icon-left">
+                                                                <i class="icon ion-bag"></i> Add to cart
+                                                            </button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <!-- Rating stars -->
+                                        <div class="rating mt-2">
+                                            <span class="star voted" rel="1"></span>
+                                            <span class="star voted" rel="2"></span>
+                                            <span class="star voted" rel="3"></span>
+                                            <span class="star" rel="4"></span>
+                                            <span class="star" rel="5"></span>
+
+                                            <span class="rating-count">(2 customer reviews)</span>
+                                        </div>
+
+                                        <span class="space-xs-md"></span>
+
+                                        <!-- Product description -->
+                                        <div class="product-short-text">
+                                            <p>
+                                                <%= @item.description %>
+                                            </p>
+
+                                        <!-- Social Links -->
+                                            <ul class="inline-links inline-links--style-1 mt-4">
+                                                <li>
+                                                    <a href="#">Twitter</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#">Facebook</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#">Pinterest</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+</body>
+</html>
