--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -14,7 +14,12 @@
                                         <div class="swiper-container" data-swiper-items="1" data-swiper-space-between="0">
                                             <div class="swiper-wrapper pb-5">
                                                 <div class="swiper-slide">
-                                                    <%= image_tag(@item.image_url) %>
+                                                    <%if @item.image_upload.attached?%>
+                                                        <%= image_tag @item.image_upload, alt: 'image_upload' %>
+                                                      <%else%>
+                                                        <%= image_tag(@item.image_url) %>
+                                                      <%end%>
+                                                    
                                                 </div>
                                                 <div class="swiper-slide">
                                                     <%= image_tag 'cat-category/cat-birman.png', class: "img-fluid"%>
