--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,2 +1,19 @@
-<h1>Orders#show</h1>
-<p>Find me in app/views/orders/show.html.erb</p>
+<%= form_tag orders_path do %>
+  <article>
+    <% if flash[:error].present? %>
+      <div id="error_explanation">
+        <p><%= flash[:error] %></p>
+      </div>
+    <% end %>
+    <label class="amount">
+      <span>Amount: $5.00</span>
+    </label>
+  </article>
+
+  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+          data-description="Kitties"
+          data-label="Valider la commande"
+          data-amount="500"
+          data-locale="auto"></script>
+<% end %>
