--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,81 +15,7 @@
   <div class="body-wrap shop-default shop-minimalist">
       <div id="st-container" class="st-container">
 
-          <nav class="st-menu st-effect-1" id="menu-1">
-      <div class="st-profile">
-          <div class="st-profile-user-wrapper">
-              <div class="profile-user-image">
-                  <img src="../../assets/images/prv/people/person-1.jpg" class="img-circle" />
-              </div>
-              <div class="profile-user-info">
-                  <span class="profile-user-name">Bertram Ozzie</span>
-                  <span class="profile-user-email">username@example.com</span>
-              </div>
-          </div>
-      </div>
-
-      <div class="st-menu-list mt-2">
-          <ul>
-              <li>
-                  <a href="#">
-                      <i class="ion-ios-bookmarks-outline"></i> Theme documentation
-                  </a>
-              </li>
-              <li>
-                  <a href="#">
-                      <i class="ion-ios-cart-outline"></i> Purchase Tribus
-                  </a>
-              </li>
-          </ul>
-      </div>
-
-      <h3 class="st-menu-title">Account</h3>
-      <div class="st-menu-list">
-          <ul>
-              <li>
-                  <a href="#">
-                      <i class="ion-ios-person-outline"></i> User profile
-                  </a>
-              </li>
-              <li>
-                  <a href="#">
-                      <i class="ion-ios-location-outline"></i> My addresses
-                  </a>
-              </li>
-              <li>
-                  <a href="#">
-                      <i class="ion-card"></i> My cards
-                  </a>
-              </li>
-              <li>
-                  <a href="#">
-                      <i class="ion-ios-unlocked-outline"></i> Password update
-                  </a>
-              </li>
-          </ul>
-      </div>
-
-      <h3 class="st-menu-title">Support center</h3>
-      <div class="st-menu-list">
-          <ul>
-              <li>
-                  <a href="#">
-                      <i class="ion-ios-information-outline"></i> About Tribus
-                  </a>
-              </li>
-              <li>
-                  <a href="#">
-                      <i class="ion-ios-email-outline"></i> Contact &amp; support
-                  </a>
-              </li>
-              <li>
-                  <a href="#">
-                      <i class="fa fa-camera"></i> Getting started
-                  </a>
-              </li>
-          </ul>
-      </div>
-  </nav>
+          
 
           <div class="st-pusher">
               <div class="st-content">
@@ -98,24 +24,7 @@
                       <div class="header">
       <!-- Top Bar -->
       
-      <!-- Global Search -->
-      <section id="sctGlobalSearch" class="global-search global-search-overlay">
-      <div class="container">
-          <div class="global-search-backdrop mask-dark--style-2"></div>
-
-          <!-- Search form -->
-          <form class="form-horizontal form-global-search z-depth-2-top" role="form">
-              <div class="px-4">
-                  <div class="row">
-                      <div class="col-12">
-                          <input type="text" class="search-input" placeholder="Type and hit enter ...">
-                      </div>
-                  </div>
-              </div>
-              <a href="#" class="close-search" data-toggle="global-search" title="Close search bar"></a>
-          </form>
-      </div>
-  </section>
+      
 
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg navbar--bold navbar--style-2 navbar-light bg-default  navbar--bb-1px">
@@ -133,18 +42,7 @@
               </div>
 
               <div class="collapse navbar-collapse align-items-center justify-content-center" id="navbar_main">
-      <!-- Navbar search - For small resolutions -->
-      <div class="navbar-search-widget b-xs-bottom py-3 d-lg-none d-none">
-          <form class="" role="form">
-              <div class="input-group input-group-lg">
-                  <input type="text" class="form-control" placeholder="Search for...">
-                  <span class="input-group-btn">
-                  <button class="btn btn-base-3" type="button">Go!</button>
-                  </span>
-              </div>
-          </form>
-      </div>
-
+      
       <!-- Navbar links -->
       <ul class="navbar-nav">
           <li class="nav-item dropdown megamenu">
@@ -178,19 +76,12 @@
 
   <div class=" d-none d-lg-inline-block d-xl-inline-block">
       <ul class="navbar-nav ml-auto" data-hover="dropdown">
-          <!-- Search button -->
-          <li class="nav-item nav-item-icon hidden-md-down" data-toggle="global-search">
-              <a href="#" class="nav-link">
-                  <span>
-                      <i class="fa fa-search"></i>
-                  </span>
-              </a>
-          </li>
+          
 
           <!-- Login -->
           <li class="nav-item nav-item-icon">
               <a href="#" class="nav-link hidden-md-down" data-toggle="dropdown">
-                  <i class="fa fa-user"></i>
+                  <i class="fas fa-user"></i>
               </a>
 
               <ul class="dropdown-menu dropdown-menu--right dropdown-form">
@@ -245,7 +136,7 @@
           <!-- Cart -->
           <li class="nav-item nav-item-icon dropdown">
               <a class="nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <i class="fa fa-shopping-bag"></i>
+                  <i class="fas fa-shopping-bag"></i>
                   <sup class="badge bg-base-1">3</sup>
               </a>
 
@@ -359,9 +250,7 @@
 
           <!-- Slidebar -->
                   <li class="nav-item nav-item-icon hidden-md-down">
-              <a href="#" class="nav-link btn-st-trigger" data-effect="st-effect-1">
-                  <span><i class="fa fa-bars"></i></span>
-              </a>
+              
           </li>
               </ul>
   </div>
@@ -369,6 +258,9 @@
           </div>
       </nav>
   </div>
+
+  <!-- Font Awesome kit's code here -->
+    <script src="https://kit.fontawesome.com/66959b10c2.js"></script>
   </head>
 
   <body>
@@ -470,22 +362,22 @@
                           <ul class="social-media social-media--style-1-v4">
                               <li>
                                   <a href="#" class="facebook" target="_blank" data-toggle="tooltip" data-original-title="Facebook">
-                                      <i class="fa fa-facebook"></i>
+                                      <i class="fab fa-facebook-f"></i>
                                   </a>
                               </li>
                               <li>
                                   <a href="#" class="instagram" target="_blank" data-toggle="tooltip" data-original-title="Instagram">
-                                      <i class="fa fa-instagram"></i>
+                                      <i class="fab fa-instagram"></i>
                                   </a>
                               </li>
                               <li>
                                   <a href="#" class="dribbble" target="_blank" data-toggle="tooltip" data-original-title="Dribbble">
-                                      <i class="fa fa-dribbble"></i>
+                                      <i class="fab fa-dribbble"></i>
                                   </a>
                               </li>
                               <li>
                                   <a href="#" class="dribbble" target="_blank" data-toggle="tooltip" data-original-title="Github">
-                                      <i class="fa fa-github"></i>
+                                      <i class="fab fa-github"></i>
                                   </a>
                               </li>
                           </ul>
