Modification of some forms

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-      <div class="jumbotron jumbotron-fluid" style="background-color:#cae3ed">
+
+      <div class="jumbotron jumbotron-fluid" style="background-color:#cae3ed;background-image: url('https://images.pexels.com/photos/2194261/pexels-photo-2194261.jpeg?cs=srgb&dl=adorable-animal-cat-2194261.jpg&fm=jpg');background-position: center center; background-size: cover;">
         <div class="container">
           <p id="notice"><%= notice %></p>
           <h1 class="display-5 text-center" style="color:#37444a" > <strong>Email: </strong><%= @user.email %> </h1><br>
@@ -10,6 +11,6 @@
         <a href=><button class='btn btn-success' ><%= link_to 'Back', items_path %></button></a>
           </p>
           </div>
-          <br/><br/><br/>
+          <br/><br/><br/><br/><br/><br/><br/><br/><br/>
       </div>
 </html>
