Last commit! we have the code but some root need to be set

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -62,11 +62,11 @@
                                                         </div>
                                                     </div>
                                                     <div class="row mt-2">
-                                                        <div class="col-12">
+                                                        <div class="col-12 text-center">
                                                             <!-- Add to cart button -->
-                                                            <button type="button" class="btn btn-lg btn-block btn-gray-dark btn-icon-left">
-                                                                <i class="icon ion-bag"></i> Add to cart
-                                                            </button>
+                                                            
+                                                               <%=link_to "Add to cart", item_path, class:"tn btn-lg btn-block btn-gray-dark btn-icon-left"%>
+                                                           
                                                         </div>
                                                     </div>
                                                 </div>
